--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@mantine/core": "^3.6.14",
     "@mantine/hooks": "^3.6.14",
+    "@radix-ui/react-icons": "^1.1.0",
     "axios": "^0.26.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
